Миграция на Stream API